# openbabel-rust

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md
.github/workflows/: main.yml
benches/: fingerprint.rs  substructure.rs
ci/: Dockerfile-musl  run.sh
examples/: fingerprint.rs
openbabel-sys/: Cargo.toml  build.rs
openbabel-sys/openbabel-extra/: README.md
openbabel-sys/scripts/: build.sh
openbabel-sys/src/: lib.rs  tests.rs  wrapper.cpp  wrapper.h
openbabel-sys/src/data/: atomizationenergies.h  bondtyp.h  phmodeldata.h  ringtyp.h  spacegroups.h  torlib.h  types.h
openbabel-sys/src/fingerprint/: finger2.cpp  finger2.h  finger3.h
openbabel-sys/src/fingerprints/: finger2.cpp  finger3.cpp  fingerecfp.cpp
openbabel-sys/src/formats/: smilesformat.cpp  smilesformat.h
src/: conversion.rs  fingerprint.rs  forcefields.rs  lib.rs  molecule.rs  smartspattern.rs  utils.rs
src/io/: conversion.rs  formats.rs  mod.rs
