[package]
name = "openbabel"
version = "0.3.0"
edition = "2018"
authors = ["Qin Wan <rogerwq@gmail.com>"]
license = "MIT"
description = "Rust bindings to cheminformatics toolbox OpenBabel"
repository = "https://github.com/rogerwq/openbabel-rust"
homepage = "https://github.com/rogerwq/openbabel-rust"
documentation = "https://docs.rs/openbabel"
keywords = ["cheminformatics", "openbabel"]
categories = ["science"]

[dependencies]
cxx = "1.0"
ob_rs = { package = "openbabel-sys", path = "openbabel-sys", version = "0.1.7" }
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"

[dev-dependencies]
criterion = "0.3.5"
# chiral_db_sources = { package = "chiral_db_sources", git = "https://github.com/chiral-data/chiral-db-sources.git", branch = "dev" }

[[bench]]
name = "fingerprint"
harness = false

[[example]]
name = "fingerprint"
path = "examples/fingerprint.rs"
