[package]
name = "openbabel"
version = "0.5.2"
edition = "2018"
authors = ["Qin Wan <rogerwq@gmail.com>"]
license = "MIT"
description = "Rust bindings to cheminformatics toolbox OpenBabel"
repository = "https://github.com/rogerwq/openbabel-rust"
homepage = "https://github.com/rogerwq/openbabel-rust"
documentation = "https://docs.rs/openbabel"
keywords = ["cheminformatics", "openbabel"]
categories = ["science"]

[dependencies]
cxx = "1.0"
ob_rs = { package = "openbabel-sys", version = "0.5.0", path = "openbabel-sys" }
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
criterion = "0.3.5"
chiral-db-sources = "0.2.0" 

[[bench]]
name = "fingerprint"
harness = false

[[bench]]
name = "substructure"
harness = false

[[example]]
name = "fingerprint"
path = "examples/fingerprint.rs"
