[package]
name = "openbabel-sys"
version = "0.1.0+openbabel-3.1.1"
edition = "2018"
authors = ["Qin Wan <rogerwq@gmail.com>"]
license = "MIT"
description = "Native bindings to OpenBabel"
repository = "https://github.com/rogerwq/openbabel-rust"
homepage = "https://github.com/rogerwq/openbabel-rust"
documentation = "https://docs.rs/openbabel-sys"
keywords = ["cheminformatics", "openbabel", "cplusplus", "ffi"]
categories = ["science"]
exclude = [
    "openbabel/test/*"
]

[dependencies]
cxx = "1.0"

[build-dependencies]
cxx-build = "1.0"
fs_extra = "1.2.0"