[package]
name = "openbabel-sys"
version = "0.1.4+openbabel-3.1.1"
edition = "2018"
authors = ["Qin Wan <rogerwq@gmail.com>"]
license = "MIT"
description = "Native bindings to OpenBabel"
repository = "https://github.com/rogerwq/openbabel-rust"
homepage = "https://github.com/rogerwq/openbabel-rust"
documentation = "https://docs.rs/openbabel-sys"
keywords = ["cheminformatics", "openbabel", "cplusplus", "ffi"]
categories = ["science"]
include = [
    "/openbabel/src/*.cpp",
    "/openbabel/src/stereo/*.cpp",
    "/openbabeel/src/math/*.cpp",
    "/openbabel/src/formats/*.cpp",
    "/openbabel/src/fingerprints/*.cpp",
    "/openbabel/data/patterns.txt",
    "/openbabel/data/SMARTS_InteLigand.txt",
    "/src"
]

[dependencies]
cxx = "1.0"

[build-dependencies]
cxx-build = "1.0"
fs_extra = "1.2.0"