[package]
name = "openbabel-sys"
version = "0.1.7+openbabel-3.1.1"
edition = "2018"
authors = ["Qin Wan <rogerwq@gmail.com>"]
license = "MIT"
description = "Native bindings to OpenBabel"
repository = "https://github.com/rogerwq/openbabel-rust"
homepage = "https://github.com/rogerwq/openbabel-rust"
documentation = "https://docs.rs/openbabel-sys"
keywords = ["cheminformatics", "openbabel", "cplusplus", "ffi"]
categories = ["science"]
include = [
    "/openbabel/src/config.h.cmake",
    "/openbabel/src/*.cpp",
    "/openbabel/src/stereo/*.cpp",
    "/openbabel/src/math/*.cpp",
    "/openbabel/src/formats/*.cpp",
    "/openbabel/src/fingerprints/*.cpp",
    "/openbabel/include/openbabel",
    "/openbabel/src/*.h",
    "/openbabel/src/stereo/*.h",
    "/openbabel/src/formats/*.h",
    "/src",
    "/src/data/*.h",
    "/scripts",
    "build.rs"
]

[lib]
name = 'openbabel_sys'
path = "src/lib.rs"

[dependencies]
cxx = "1.0"

[dev-dependencies]
tempfile = "3.3.0"

[build-dependencies]
cxx-build = "1.0"
fs_extra = "1.2.0"